# promptlm-client-sdk

./: .gitignore  .gitleaks.toml  .license-header.txt  .licenserc-header.txt  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  build-jdk.sh  pom.xml
.github/: dependabot.yml
.github/workflows/: oss-checks.yml  release-java.yml  verify-java-release.yml
client-sdk-java/: README.md  pom.xml
client-sdk-java/src/main/java/dev/promptlm/client/: ClasspathPromptLoader.java  Prompt.java  PromptLoader.java
client-sdk-python/: README.md  pyproject.toml
client-sdk-python/scripts/: smoke_install.py
client-sdk-python/src/promptlm_client/: __init__.py  errors.py  loader.py  models.py  sources.py
client-sdk-python/src/promptlm_client/resources/: __init__.py
client-sdk-python/tests/: test_loader.py
client-sdk-ts/: package.json  tsconfig.json
client-sdk-ts/resources/prompts/: prompt-index.json
client-sdk-ts/resources/prompts/text/translate/: promptlm.json
client-sdk-ts/scripts/: smoke-install.mjs
client-sdk-ts/src/: errors.ts  index.ts  loader.ts  sources.ts  types.ts
client-sdk-ts/test/: loader.test.ts
docs/: maven-central-settings.xml.example  releasing-java.md
src/main/java/dev/promptlm/client/: Prompt.java  PromptLoader.java
src/main/resources/: application.properties
src/test/java/dev/promptlm/client/: PromptTest.java
src/test/resources/prompts/: prompt-index.json
src/test/resources/prompts/text/translate/: promptlm.yml
(+6 files in other folders)
