[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptlm-client-python"
version = "0.1.0"
description = "Python SDK for promptLM JSON prompt bundles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptlm_client = [
  "resources/prompts/*.json",
  "resources/prompts/*/*.json",
  "resources/prompts/*/*/*.json",
  "resources/prompts/*/*/*/*.json"
]
